--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,6 +1,7 @@
 - name: Edward Feng
   github: edwfeng
   web: https://ewf.me
+  email: ed@ewf.me
 - name: Aidan Glickman
   github: AidanGlickman
   web: https://aidanglickman.com
