--- a/_data/members.yml
+++ b/_data/members.yml
@@ -18,6 +18,9 @@
   linkedin: https://www.linkedin.com/in/aidanglickman/
 - name: Ari Kamat
   github: arikamat
+  web: https://www.arikamat.com/
+  email: arijkamat@gmail.com
+  linkedin: https://www.linkedin.com/in/arikamat/
 - name: Michael Kasprzak
   github: michaelk522
   email: michael@ezkz.show
