Fix Erez's email

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -3,7 +3,7 @@
   email: ed@ewf.me
 - name: Erez Israeli Miller
   github: eiis1000
-  email: erez@ezkz.show
+  email: erez.m.israeli@gmail.com
 - name: Anthony Li
   github: anli5005
   twitter: anli5005
