--- a/_data/members.yml
+++ b/_data/members.yml
@@ -10,6 +10,7 @@
   web: https://anli.dev
   email: me@anli.dev
   linkedin: https://www.linkedin.com/in/anli5005
+  youtube: https://www.youtube.com/channel/UCKSECIUsF-E639ipu6_JwJw
 - name: Aidan Glickman
   github: AidanGlickman
   web: https://aidanglickman.com
