Change Michael K's email to his personal email.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -24,7 +24,7 @@
   linkedin: https://www.linkedin.com/in/arikamat/
 - name: Michael Kasprzak
   github: michaelk522
-  email: michael@ezkz.show
+  email: michaelkasprzak522@gmail.com
 - name: Jeremy Kurian
   github: jerkur22
 - name: Michael Papadopoulos
