--- a/_data/ctfs.yml
+++ b/_data/ctfs.yml
@@ -12,3 +12,13 @@
   url: https://ctf.redpwn.net
 - name: ENOWARS 4
   url: https://enowars.com
+- name: InCTF 2020
+  url: https://inctf.in/
+- name: Google CTF 2020
+  url: https://capturetheflag.withgoogle.com/
+- name: ALLES! CTF 2020
+  url: https://ctftime.org/event/1091
+- name: CSAW CTF
+  url: https://ctf.csaw.io/
+- name: Newark Academy CTF 2020
+  url: https://www.nactf.com/
