Add pico2021 to ctfs.yml

--- a/_data/ctfs.yml
+++ b/_data/ctfs.yml
@@ -22,3 +22,5 @@
   url: https://ctf.csaw.io/
 - name: Newark Academy CTF 2020
   url: https://www.nactf.com/
+- name: picoCTF 2021
+  url: https://picoctf.org/
