--- a/_data/ctfs.yml
+++ b/_data/ctfs.yml
@@ -24,3 +24,5 @@
   url: https://www.nactf.com/
 - name: picoCTF 2021
   url: https://picoctf.org/
+- name: ångstromCTF 2021
+  url: https://2021.angstromctf.com
