Add Skyler Calaman to the members list

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -37,4 +37,6 @@
   github: zsofiagordon
 - name: Andrew Theberge
   github: theberge-256
- 
+- name: Skyler Calaman
+  github: blckbrry-pi
+  email: skylercalaman@icloud.com
