Add Krish Arora to members.yaml

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -40,3 +40,6 @@
 - name: Skyler Calaman
   github: blckbrry-pi
   email: skylercalaman@icloud.com
+-name: Krish Arora
+  github: kna27
+  email: krisharora27@gmail.com
